# p3_dot_analyzer

./: .gitignore  AGENT.md  README.md  build_exe.ps1  lint.ps1  p3_dot_analyzer_cli.py  pyproject.toml
.github/workflows/: pyinstaller.yaml
src/p3_dot_analyzer/: analysis.py  camera.py  constants.py  jirka.py  main.py  models.py  named_areas.py  render.py  settings_io.py  state.py  ui_helpers.py
src/p3_dot_analyzer/services/: __init__.py  analysis_service.py  areas_service.py
src/p3_dot_analyzer/ui/: __init__.py  analysis_panel.py  app.py  areas_panel.py  events.py  recording_panel.py
