[project]
name = "p3-dot-analyzer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Vojtěch Boček", email = "vbocek@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "dearpygui>=2.1.1",
    "opencv-python>=4.13.0.90",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pyinstaller>=6.18.0",
    "ruff>=0.14.13",
]

[project.scripts]
p3_dot_analyzer = "p3_dot_analyzer.__main__:main"

[tool.mypy]
strict = true

[tool.setuptools.packages.find]
where = ["./src"]
include = ["p3_dot_analyzer"]

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"
